Fix table align and table text align

--- a/source/_static/css/style.css
+++ b/source/_static/css/style.css
@@ -283,6 +283,7 @@ code, pre, tt {
 
 table.docutils {
   margin-bottom: 1rem;
+  text-align: left !important;
 }
 
 table.docutils td, table.docutils th {
@@ -290,6 +291,11 @@ table.docutils td, table.docutils th {
   border: 1px solid #dee2e6 !important;
   font-size: 16px;
   color: #171717 !important;
+}
+
+table.align-default {
+  margin-left: 0 !important;
+  text-align: left !important;
 }
 
 table .highlight {
